Added some sercurity, remove almost data